flutter-web/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: flutter-web
  labels:
    app: flutter-web
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
  selector:
    app: flutter-web
